--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- header -->
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="#" class="nav-logo">Anderson Nekam</a>
+        <a href="#" class="nav-logo">Anderson Nekamccc</a>
         <div class="nav-menu" id="nav-menu">
           <ul class="nav-list grid">
             <li class="nav-item">
@@ -118,7 +118,15 @@
               <h1 class="home-title">Bonjour, je suis Anderson Nekam</h1>
               <h3 class="home-subtitle">Expert en Marketing Digital</h3>
               <p class="home-description">
-                Je suis passionné par le marketing digital et la gestion de communautés en ligne, je combine créativité et analyse pour accroitre la visibilité des marques et générer des résultats durables. Grace à mes expériences dans divers secteurs, j'ai développé une expertise solide en Community management, Social Media Management, Content Marketing, et Marketing Digital. Avec mon savoir-faire et mes compétences, je suis prêt à vous accompagner dans vos projets et vous aider à atteindre vos objectifs.
+                Je suis passionné par le marketing digital et la gestion de
+                communautés en ligne, je combine créativité et analyse pour
+                accroitre la visibilité des marques et générer des résultats
+                durables. Grace à mes expériences dans divers secteurs, j'ai
+                développé une expertise solide en Community management, Social
+                Media Management, Content Marketing, et Marketing Digital. Avec
+                mon savoir-faire et mes compétences, je suis prêt à vous
+                accompagner dans vos projets et vous aider à atteindre vos
+                objectifs.
               </p>
               <a href="#contact" class="button button-flex">
                 Me contacter <i class="fa-regular fa-envelope button-icon"></i>
@@ -142,9 +150,7 @@
           <img src="Assets/Icons/aboutimg.png" alt="" class="about-img" />
           <div class="about-data">
             <p class="about-description">
-             
-Expert en marketing digital et gestion de communautés en ligne
-
+              Expert en marketing digital et gestion de communautés en ligne
             </p>
             <div class="about-info">
               <div>
@@ -474,7 +480,11 @@ Expert en marketing digital et gestion de communautés en ligne
         <div class="portfolio-container container swiper-container">
           <div class="swiper-wrapper">
             <div class="portfolio-content grid swiper-slide">
-              <img src="Assets/project1.svg" alt="photo de profile" class="portfolio-img" />
+              <img
+                src="Assets/project1.svg"
+                alt="photo de profile"
+                class="portfolio-img"
+              />
               <div class="portfolio-data">
                 <h3 class="portfolio-title">Campagne Réseaux Sociaux</h3>
                 <p class="portfolio-description">
@@ -585,9 +595,9 @@ Expert en marketing digital et gestion de communautés en ligne
                 </div>
               </div>
               <p class="testimonial-description">
-                Anderson a transformé notre présence en ligne avec une
-                stratégie marketing percutante et des visuels captivants. Un
-                vrai professionnel !
+                Anderson a transformé notre présence en ligne avec une stratégie
+                marketing percutante et des visuels captivants. Un vrai
+                professionnel !
               </p>
             </div>
             <div class="testimonial-content swiper-slide">
@@ -696,14 +706,14 @@ Expert en marketing digital et gestion de communautés en ligne
             <div class="footer-socials">
               <a
                 style="
-      background-color: #0A66C2;
-      color: white;
-      padding: 12px 20px;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: bold;
-      font-family: sans-serif;
-    "
+                  background-color: #0a66c2;
+                  color: white;
+                  padding: 12px 20px;
+                  border-radius: 8px;
+                  text-decoration: none;
+                  font-weight: bold;
+                  font-family: sans-serif;
+                "
                 href="https://www.linkedin.com/in/anderson-nekam-5551b92b3"
                 target="_blank"
                 class="footer-social"
@@ -728,15 +738,15 @@ Expert en marketing digital et gestion de communautés en ligne
                 <i class="fa-brands fa-whatsapp"></i>
               </a>
               <a
-              style="
-      background-color: #1877F2;
-      color: white;
-      padding: 12px 20px;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: bold;
-      font-family: sans-serif;
-    "
+                style="
+                  background-color: #1877f2;
+                  color: white;
+                  padding: 12px 20px;
+                  border-radius: 8px;
+                  text-decoration: none;
+                  font-weight: bold;
+                  font-family: sans-serif;
+                "
                 href="https://www.facebook.com/share/1GJ9R4mXdz/"
                 target="_blank"
                 class="footer-social"
