--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- header -->
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="#" class="nav-logo">frsdd</a>
+        <a href="#" class="nav-logo">frsddd</a>
         <div class="nav-menu" id="nav-menu">
           <ul class="nav-list grid">
             <li class="nav-item">
